# test_opencv_c--

./: CMakeLists.txt
src/: camera.cpp  camshift.cpp  farneback.cpp  kalman_filter.cpp  main.cpp  mean_shift.cpp
